--- a/index.html
+++ b/index.html
@@ -2,9 +2,83 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Шаблон</title>
+	<link rel="stylesheet" href="libs/bootstrap4/css/bootstrap.min.css">
+	<link rel="stylesheet" href="libs/font-awesome-4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<h1>Hello, world!!</h1>
+
+
+
+	<header class="header">
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+			<div class="container">
+				<a class="navbar-brand" href="#top">Пoртфолио</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNav">
+					<ul class="navbar-nav ml-auto">
+						<li class="nav-item active">
+							<a class="nav-link" href="#portfolio">потфолио</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#about">обо мне</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#contact">контакты</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+		<div class="header_cover">
+			<div class="image">
+				<img src="img/ava.png">
+			</div>
+			<div class="intro-text">
+				<h1 class="name">John Doe</h1>
+				<span class="portfolio_star"><i class="fa fa-star"></i></span>
+				<p class="skills">html - css - bootstrap-4 - photoshop</p>
+			</div>
+		</div>
+	</header>
+
+	<section class="portfolio">
+		<div class="container">
+			<div class="text-center">
+				<h2 class="title">мои работы</h2>
+				<span class="portfolio_star"><i class="fa fa-star"></i></span>
+			</div>
+			<div class="row">
+				<div class="col-lg-4">
+					<a href="/company" class="portfolio__link">
+						<img src="img/1.png" alt="">
+						<span class="caption"><i class="fa fa-eye"></i></span>
+					</a>
+				</div>
+				<div class="col-lg-4">
+					<a href="/hiking" class="portfolio__link">
+						<img src="img/2.png" alt="">
+						<span class="caption"><i class="fa fa-eye"></i></span>
+					</a>
+				</div>
+				<div class="col-lg-4">
+					<a href="" class="portfolio__link">
+						<img src="img/events1.png" alt="">
+						<span class="caption"><i class="fa fa-eye"></i></span>
+					</a>
+				</div>
+			</div>
+		</div>
+	</section>
+
+
+
+	<script src="libs/jquery/jquery-3.3.1.min.js"></script>
+	<script src="libs/bootstrap4/js/popper.min.js"></script>
+	<script src="libs/bootstrap4/js/bootstrap.min.js"></script>
+	<script></script>
 </body>
 </html>
