--- a/index.html
+++ b/index.html
@@ -44,7 +44,13 @@
 			</div>
 		</div>
 	</header>
-
+<div class="addthis_toolbox addthis_default_style" data-url="<?php echo $share; ?>">
+              <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
+              <a class="addthis_button_tweet"></a>
+              <a class="addthis_button_pinterest_pinit"></a>
+              <a class="addthis_counter addthis_pill_style"></a>
+            </div>
+            <script src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-515eeaf54693130e"></script>
 	<section class="portfolio">
 		<div class="container">
 			<div class="text-center">
