--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			</div>
 		</div>
 	</header>
-<div class="addthis_toolbox addthis_default_style" data-url="<?php echo $share; ?>">
+<div class="addthis_toolbox addthis_default_style" data-url="https://proweb-group5.github.io">
               <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
               <a class="addthis_button_tweet"></a>
               <a class="addthis_button_pinterest_pinit"></a>
